[tool.poetry]
name = "redmineapi-tools"
version = "2020.07.0"
description = "Some Python tools for working with the Redmine REST API using python-redmine"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
python-redmine = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-httpretty = "^0.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
